fix: 80610,80674 and alignment fixes

--- a/packages/appstore/src/components/account-manager/account-manager.scss
+++ b/packages/appstore/src/components/account-manager/account-manager.scss
@@ -15,6 +15,7 @@
         display: flex;
         flex-direction: column;
         margin-left: 0.8rem;
+        margin-right: 1.8rem;
         &--title {
             cursor: pointer;
         }
